# rbuilder

./: Cargo.toml  Dockerfile  Makefile  README.md  config-live-example.toml  rust-toolchain.toml
.github/: CODEOWNERS
.github/workflows/: checks.yaml  release.yaml
crates/bid-scraper/: Cargo.toml
crates/bid-scraper/src/: best_bid_ws_connector.rs  bid_scraper.rs  bid_scraper_client.rs  bid_sender.rs  bids_publisher.rs  bloxroute_ws_publisher.rs  code_from_rbuilder.rs  config.rs  headers_publisher.rs  lib.rs  main.rs  relay_api_publisher.rs  ultrasound_ws_publisher.rs  ws_publisher.rs
crates/bid-scraper/src/types/: bid.rs  bid_update.rs  mod.rs
crates/eth-sparse-mpt/: Cargo.toml
crates/eth-sparse-mpt/benches/: trie_do_bench.rs  trie_insert_bench.rs
crates/eth-sparse-mpt/src/: lib.rs  test_utils.rs  utils.rs
crates/eth-sparse-mpt/src/reth_sparse_trie/: mod.rs
crates/eth-sparse-mpt/src/sparse_mpt/diff_trie/: mod.rs
crates/eth-sparse-mpt/src/v2/: fetch.rs  mod.rs
crates/rbuilder/: Cargo.toml  build.rs
crates/rbuilder-config/src/: logger.rs
crates/rbuilder-operator/: Cargo.toml
crates/rbuilder-operator/src/: blocks_processor.rs  flashbots_config.rs
crates/rbuilder-operator/src/bidding_service_wrapper/: bidding_service.rs  conversion.rs
crates/rbuilder-operator/src/bidding_service_wrapper/client/: bidding_service_client_adapter.rs
crates/rbuilder-operator/src/bidding_service_wrapper/fast_streams/: helpers.rs  types.rs
crates/rbuilder-operator/src/bidding_service_wrapper/proto/: bidding_service.proto
crates/rbuilder-operator/src/true_block_value_push/: best_true_value_observer.rs
crates/rbuilder-primitives/: Cargo.toml
crates/rbuilder-primitives/src/: built_block.rs  lib.rs  mev_boost.rs  order_builder.rs  serialize.rs  test_data_generator.rs
crates/rbuilder-primitives/src/mev_boost/: adjustment.rs  mod.rs  ssz_roots.rs  submit_block.rs  submit_header.rs
crates/rbuilder-rebalancer/: Cargo.toml
crates/rbuilder-utils/: Cargo.toml
crates/rbuilder-utils/src/: lib.rs
crates/rbuilder-utils/src/clickhouse/: indexer.rs  mod.rs
crates/rbuilder/benches/benchmarks/: mev_boost.rs
crates/rbuilder/src/backtest/: backtest_build_range.rs  execute.rs  mod.rs  store.rs
crates/rbuilder/src/backtest/build_block/: backtest_build_block.rs  full_partial_block_execution_tracer.rs  landed_block_from_db.rs  synthetic_orders.rs
crates/rbuilder/src/backtest/fetch/: backtest_fetch.rs  flashbots_db.rs  mempool.rs  mev_boost.rs  mod.rs
crates/rbuilder/src/backtest/redistribute/: mod.rs
crates/rbuilder/src/backtest/redistribute/cli/: mod.rs
crates/rbuilder/src/backtest/restore_landed_orders/: find_landed_orders.rs  resim_landed_block.rs
crates/rbuilder/src/building/: bid_adjustments.rs  built_block_trace.rs  cached_reads.rs  conflict.rs  evm.rs  evm_inspector.rs  mod.rs  order_commit.rs  payout_tx.rs  precompile_cache.rs  sim.rs
crates/rbuilder/src/building/block_orders/: mod.rs  multi_share_bundle_merger.rs  order_dumper.rs  order_priority.rs  prioritized_order_store.rs  share_bundle_merger.rs  test_context.rs  test_data_generator.rs
crates/rbuilder/src/building/builders/: block_building_helper.rs  block_building_helper_stats_logger.rs  mock_block_building_helper.rs  mod.rs  ordering_builder.rs
crates/rbuilder/src/building/builders/parallel_builder/: block_building_result_assembler.rs  conflict_resolvers.rs  conflict_resolving_pool.rs  conflict_task_generator.rs  groups.rs  mod.rs  order_intake_store.rs  simulation_cache.rs
crates/rbuilder/src/building/testing/: test_chain_state.rs
crates/rbuilder/src/building/testing/bundle_tests/: mod.rs  setup.rs
crates/rbuilder/src/building/testing/evm_inspector_tests/: setup.rs
crates/rbuilder/src/building/tx_sim_cache/: evm_db.rs  mod.rs  result_store.rs
crates/rbuilder/src/integration/: playground.rs  simple.rs
crates/rbuilder/src/live_builder/: base_config.rs  block_list_provider.rs  cli.rs  config.rs  mod.rs  wallet_balance_watcher.rs
crates/rbuilder/src/live_builder/block_output/: best_block_from_algorithms.rs  bid_observer.rs  bid_observer_multiplexer.rs  bidding_service_interface.rs  block_sealing_bidder_factory.rs  mod.rs  relay_submit.rs  true_value_bidding_service.rs  unfinished_block_processing.rs
crates/rbuilder/src/live_builder/block_output/bid_value_source/: best_bid_sync_source.rs  interfaces.rs
crates/rbuilder/src/live_builder/block_output/bidding/: block_bid_with_stats.rs  interfaces.rs  mod.rs  sequential_sealer_bid_maker.rs  true_block_value_bidder.rs  wallet_balance_watcher.rs
crates/rbuilder/src/live_builder/building/: built_block_cache.rs  mod.rs  unfinished_block_building_sink_muxer.rs
crates/rbuilder/src/live_builder/order_input/: blob_type_order_filter.rs  mempool_txs_detector.rs  mod.rs  order_sink.rs  orderpool.rs  replaceable_order_sink.rs  rpc_server.rs  txpool_fetcher.rs
crates/rbuilder/src/live_builder/payload_events/: mod.rs  relay_epoch_cache.rs
crates/rbuilder/src/live_builder/simulation/: mod.rs  sim_worker.rs  simulation_job.rs
crates/rbuilder/src/live_builder/testdata/: config_with_relay_override.toml
crates/rbuilder/src/mev_boost/: adjustment.rs  bloxroute_grpc.rs  mod.rs  optimistic_v3.rs  rpc.rs  sign_payload.rs  submission.rs
crates/rbuilder/src/primitives/: built_block.rs  fmt.rs  mev_boost.rs  mod.rs  order_builder.rs  order_statistics.rs  serialize.rs  test_data_generator.rs
crates/rbuilder/src/provider/: ipc_state_provider.rs  mod.rs  reth_prov.rs
crates/rbuilder/src/roothash/: mod.rs  prefetcher.rs
crates/rbuilder/src/telemetry/metrics/: mod.rs  tracing_metrics.rs
crates/rbuilder/src/telemetry/servers/: full.rs
crates/rbuilder/src/utils/: mod.rs  noncer.rs  provider_factory_reopen.rs  receipts.rs  test_utils.rs  tracing.rs  tx_signer.rs
crates/reth-rbuilder/src/: main.rs
crates/test-relay/: Cargo.toml
crates/test-relay/src/: main.rs  relay.rs  validation_api_client.rs
docker/: Dockerfile.rbuilder
docs/: CONFIG.md
examples/config/: config-live-example.toml
examples/config/rbuilder/: config-live-example.toml
(+15 files in other folders)
