[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/flashbots/rbuilder"
repository = "https://github.com/flashbots/rbuilder"
exclude = [".github/"]

[workspace]
members = [
    "crates/rbuilder",
    "crates/reth-rbuilder",
    "crates/rbuilder/src/test_utils",
    "crates/rbuilder/src/telemetry/metrics_macros",
    "crates/eth-sparse-mpt",
    "crates/sysperf",
    "crates/test-relay",
    "crates/bid-scraper",
]
default-members = ["crates/rbuilder", "crates/reth-rbuilder", "crates/test-relay"]
resolver = "2"

# Speed up compilation time for dev builds by reducing emitted debug info.
# NOTE: Debuggers may provide less useful information with this setting.
# Uncomment this section if you're using a debugger.
[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html
debug = "line-tables-only"
split-debuginfo = "unpacked"

# Speed up tests.
[profile.dev.package]
proptest.opt-level = 3
rand_chacha.opt-level = 3
rand_xorshift.opt-level = 3
unarray.opt-level = 3

# Like release, but with full debug symbols. Useful for e.g. `perf`.
[profile.debug-fast]
inherits = "release"
debug = true
lto = "thin"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

[workspace.dependencies]
reth = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-chain-state = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-cli-util = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-db = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-db-common = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-errors = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-payload-builder = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-node-api = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-node-ethereum = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-trie = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-trie-parallel = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-basic-payload-builder = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-node-core = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-primitives = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-ethereum-primitives = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-primitives-traits = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-provider = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix", features = [
    "test-utils",
] }
reth-chainspec = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-evm = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-evm-ethereum = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-execution-errors = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-exex = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-metrics = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-trie-db = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-payload-primitives = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-transaction-pool = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-execution-types = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-revm = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-payload-builder-primitives = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-payload-util = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-rpc-layer = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-testing-utils = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }

# reth optimism
reth-optimism-primitives = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-optimism-consensus = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-optimism-cli = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-optimism-forks = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-optimism-evm = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-optimism-node = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-optimism-payload-builder = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-optimism-chainspec = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }
reth-optimism-txpool = { git = "https://github.com/bharath-123/reth", branch = "bharath/fusaka-revm-fix" }


# compatible with reth v1.4.8 dependencies
revm = { version = "27.0.1", features = [
    "std",
    "secp256k1",
    "optional_balance_check",
], default-features = false }
revm-inspectors = { version = "0.26.5", default-features = false }
revm-state = { version = "7.0.0", default-features = false }
revm-inspector = { version = "8.0.1", default-features = false }

ethereum_ssz_derive = "0.9.0"
ethereum_ssz = "0.9.0"

alloy-primitives = { version = "1.2.0", default-features = false }
alloy-rlp = "0.3.10"
alloy-chains = "0.2.0"
alloy-evm = { version = "0.13", default-features = false }
alloy-provider = { version = "1.0.16", features = ["ipc", "pubsub"] }
alloy-pubsub = { version = "1.0.16" }
alloy-eips = { version = "1.0.16" }
alloy-rpc-types = { version = "1.0.16" }
alloy-json-rpc = { version = "1.0.16"  }
alloy-transport-http = { version = "1.0.16"  }
alloy-network = { version = "1.0.16"  }
alloy-network-primitives = { version = "1.0.16"  }
alloy-transport = { version = "1.0.16" }
alloy-node-bindings = { version = "1.0.16"  }
alloy-consensus = { version = "1.0.16" , features = ["kzg"] }
alloy-serde = { version = "1.0.16"  }
alloy-rpc-types-beacon = { version = "1.0.16" , features = ["ssz"] }
alloy-rpc-types-engine = { version = "1.0.16" , features = ["ssz"] }
alloy-rpc-types-eth = { version = "1.0.16"  }
alloy-signer-local = { version = "1.0.16"  }
alloy-rpc-client = { version = "1.0.16" }
alloy-genesis = { version = "1.0.16"  }
alloy-trie = { version = "0.9.0", default-features = false }
nybbles = { version = "0.4.1" }

async-trait = { version = "0.1.83" }
clap = { version = "4.4.3", features = ["derive", "env"] }
clap_builder = { version = "4.5.19" }
thiserror = { version = "1.0.64" }
eyre = { version = "0.6.12" }
jsonrpsee = { version = "0.24.4" }
jsonrpsee-types = { version = "0.24.4" }
parking_lot = { version = "0.12.3" }
tokio = { version = "1.40.0" }
auto_impl = { version = "1.2.0" }
reqwest = { version = "0.12.8" }
serde = { version = "1.0.210" }
serde_json = { version = "1.0.128" }
serde_with = { version = "3.8.1" }
secp256k1 = { version = "0.30" }
derive_more = { version = "2" }
tokio-stream = "0.1.16"
tokio-util = "0.7.12"
url = "2.5.2"
warp = "0.3.7"
flate2 = "1.0.35"
prometheus = "0.13.4"
ctor = "0.2"

libc = { version = "0.2.161" }
lazy_static = "1.4.0"
tikv-jemallocator = { version = "0.6" }
tracing = "0.1.37"
metrics = { version = "0.24.1" }
ahash = "0.8.6"
time = { version = "0.3.36", features = ["macros", "formatting", "parsing"] }

eth-sparse-mpt = { path = "crates/eth-sparse-mpt" }
rbuilder = { path = "crates/rbuilder" }
sysperf = { path = "crates/sysperf" }
metrics_macros = { path = "crates/rbuilder/src/telemetry/metrics_macros"}


[patch.crates-io]
alloy-consensus = { git = "https://github.com/alloy-rs/alloy", branch = "fusaka/devnet2" }
alloy-contract = { git = "https://github.com/alloy-rs/alloy", branch = "fusaka/devnet2" }
alloy-eips = { git = "https://github.com/alloy-rs/alloy", branch = "fusaka/devnet2" }
alloy-genesis = { git = "https://github.com/alloy-rs/alloy", branch = "fusaka/devnet2" }
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy", branch = "fusaka/devnet2" }
alloy-network = { git = "https://github.com/alloy-rs/alloy", branch = "fusaka/devnet2" }
alloy-network-primitives = { git = "https://github.com/alloy-rs/alloy", branch = "fusaka/devnet2" }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", branch = "fusaka/devnet2" }
alloy-pubsub = { git = "https://github.com/alloy-rs/alloy", branch = "fusaka/devnet2" }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy", branch = "fusaka/devnet2" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", branch = "fusaka/devnet2" }
alloy-rpc-types-admin = { git = "https://github.com/alloy-rs/alloy", branch = "fusaka/devnet2" }
alloy-rpc-types-anvil = { git = "https://github.com/alloy-rs/alloy", branch = "fusaka/devnet2" }
alloy-rpc-types-beacon = { git = "https://github.com/alloy-rs/alloy", branch = "fusaka/devnet2" }
alloy-rpc-types-debug = { git = "https://github.com/alloy-rs/alloy", branch = "fusaka/devnet2" }
alloy-rpc-types-engine = { git = "https://github.com/alloy-rs/alloy", branch = "fusaka/devnet2" }
alloy-rpc-types-eth = { git = "https://github.com/alloy-rs/alloy", branch = "fusaka/devnet2" }
alloy-rpc-types-mev = { git = "https://github.com/alloy-rs/alloy", branch = "fusaka/devnet2" }
alloy-rpc-types-trace = { git = "https://github.com/alloy-rs/alloy", branch = "fusaka/devnet2" }
alloy-rpc-types-txpool = { git = "https://github.com/alloy-rs/alloy", branch = "fusaka/devnet2" }
alloy-serde = { git = "https://github.com/alloy-rs/alloy", branch = "fusaka/devnet2" }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", branch = "fusaka/devnet2" }
alloy-signer-local = { git = "https://github.com/alloy-rs/alloy", branch = "fusaka/devnet2" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy", branch = "fusaka/devnet2" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", branch = "fusaka/devnet2" }
alloy-transport-ipc = { git = "https://github.com/alloy-rs/alloy", branch = "fusaka/devnet2" }
alloy-transport-ws = { git = "https://github.com/alloy-rs/alloy", branch = "fusaka/devnet2" }

alloy-evm = { git = "https://github.com/alloy-rs/evm", branch = "fusaka/devnet2"}

revm = { git = "https://github.com/bluealloy/revm", branch = "rakita/eip7907" }
revm-bytecode = { git = "https://github.com/bluealloy/revm", branch = "rakita/eip7907" }
revm-database = { git = "https://github.com/bluealloy/revm", branch = "rakita/eip7907" }
revm-state = { git = "https://github.com/bluealloy/revm", branch = "rakita/eip7907" }
revm-handler = { git = "https://github.com/bluealloy/revm", branch = "rakita/eip7907" }
revm-primitives = { git = "https://github.com/bluealloy/revm", branch = "rakita/eip7907" }
revm-interpreter = { git = "https://github.com/bluealloy/revm", branch = "rakita/eip7907" }
revm-inspector = { git = "https://github.com/bluealloy/revm", branch = "rakita/eip7907" }
revm-context = { git = "https://github.com/bluealloy/revm", branch = "rakita/eip7907" }
revm-context-interface = { git = "https://github.com/bluealloy/revm", branch = "rakita/eip7907" }
revm-database-interface = { git = "https://github.com/bluealloy/revm", branch = "rakita/eip7907" }
revm-precompile = { git = "https://github.com/bluealloy/revm", branch = "rakita/eip7907" }
op-revm = { git = "https://github.com/bluealloy/revm", branch = "rakita/eip7907" }