[package]
name = "rbuilder-rebalancer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
rbuilder-config.workspace = true

alloy-primitives = { workspace = true, features = ["serde"] }
alloy-eips.workspace = true
alloy-consensus.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-provider.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true

# rt
tokio = { workspace = true, default-features = false, features = ["macros", "rt-multi-thread"] }
futures.workspace = true

# misc
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
clap.workspace = true
eyre.workspace = true
toml.workspace = true
tracing.workspace = true
reqwest.workspace = true
